--- a/src/components/Rating/Rating.module.css
+++ b/src/components/Rating/Rating.module.css
@@ -11,7 +11,7 @@
 .container {
   display: inline-flex;
   flex-direction: column;
-  gap: var(--spacing-2);
+  gap: var(--spacing-1);
 }
 
 .wrapper {
