--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -10,7 +10,7 @@
 .input-group {
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-2);
+  gap: var(--spacing-1);
   width: auto;
 }
 
